# uswfc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test-uswfc.yml
tests/: test_cli.py  test_weather.py
uswfc/: cli.py  weather.py
